--- a/caseStudyWP_FN/appendix-ERsensitivity.Rmd
+++ b/caseStudyWP_FN/appendix-ERsensitivity.Rmd
@@ -6,25 +6,25 @@ output:
 ---
 -->
 
-# SENSITIVITY OF PROJECTION-BASED LRPS TO EXPLOITATION RATES{#app:ERsensitivity-appendix}
+# SENSIBILITÉ DES PRL DE PROJECTION AUX TAUX D’EXPLOITATION{#app:ERsensitivity-appendix}
 
-To explain the initially counter-intuitive result of the sensitivity of projection based LRPs to exploitation rates, we ran an additional analysis where the spawner-recruitment parameters, productivity (log($alpha$)) and spawners at replacement, S~REP~ (log($alpha$)/$beta$) were either varied or kept constant over inlets and Monte Carlo trials. 
+Pour expliquer le résultat initialement contre-intuitif de la sensibilité des PRL de projection aux taux d’exploitation, nous avons effectué une analyse supplémentaire où les paramètres de stock-recrutement, la productivité (log($alpha$)) et l’abondance des géniteurs au remplacement, G~REM~ (log($alpha$)/$beta$)  étaient soit variés, soit maintenus constants dans les inlets et les essais de simulation MCCM. 
 
-Specifically, we evaluated the sensitivity of aggregate projection-based LRPs to exploitation rates under three alternative scenarios, as applied to the case study on WCVI Chinook Salmon:
+Plus précisément, nous avons évalué la sensibilité des PRL de projection agrégés aux taux d’exploitation selon trois scénarios de rechange, comme appliqués à l’étude de cas sur le saumon chinook de la COIV.
 
-1. All component inlets were assumed to have stock-recruitment parameters drawn from the same distributions (the mean and standard deviation for productivity and S~REP~ as estimated for Quatsino, west coast Vancouver Island) but a unique set of stock-recruitment parameters was drawn for each inlet and trial (i.e., each inlet was a replicate of each other with random variability). We chose to draw S~REP~ from a random distributions instead of Ricker $beta$ or S~MAX~ (1/$beta$) because the spawner-recruitment relationship was parameterized with S~REP~ for this case study. In preliminary sensitivity analyses, we sampled from a random distribution of $beta$ values and found similar results. We assumed strong positive covariation in recruitment residuals among inlets with pairwise correlations equal to 0.7. 
+1. On a supposé que toutes les populations d’inlet constituantes comportaient des paramètres de stock-recrutement tirés des mêmes distributions (la moyenne et l’écart-type pour la productivité et G~REM~ comme estimé pour Quatsino, COIV), mais un ensemble unique de paramètres de stock-recrutement a été établi pour chaque inlet et chaque essai (c’est-à-dire que chaque inlet était une répétition des autres avec une variabilité aléatoire). Nous avons choisi de tirer G~REM~ d’une distribution aléatoire au lieu $beta$ ou G~MAX~ de Ricker (1/$beta$) parce que la relation stock-recrutement a été paramétrée avec G~REM~ pour cette étude de cas. Dans les analyses préliminaires de sensibilité, nous avons effectué un échantillonnage à partir d’une distribution aléatoire de valeurs $beta$ et avons obtenu des résultats semblables. Nous avons supposé une forte covariation positive des résidus du recrutement entre les inlets avec des corrélations par paires égales à 0,7. 
 
-2. The productivity parameter was fixed at the mean of the assumed distribution for all inlets and trials. S~REP~ was drawn from its distribution and allowed to vary across inlets and trials. The same distribution of S~REP~ was used across inlets and trials, as in Scenario 1. 
-
-
-3. S~REP~ was fixed at the mean of the distribution across inlets and across trials. The productivity parameter was drawn from the distribution and allowed to vary across inlets and trials. The same distribution of productivity was used across inlets and trials, as in Scenario 1.
+2. Le paramètre de productivité a été fixé à la moyenne de la distribution présumée pour tous les essais et inlets. G~REM~ a été tiré de sa distribution et a permis une variation entre les inlets et les essais. La même distribution de G~REM~ a été utilisée dans les inlets et les essais, comme dans le scénario 1. 
 
 
-We found that the sensitivity of projection-based LRPs to exploitation rates was due to variability in productivity and to a lesser extent S~REP~ among inlets. In Scenario 1, when we applied a relatively high exploitation rate (45%), productivity and S~REP~ tended to be lower for random trials and inlets that dropped below the lower benchmark in at least one year (Fig. \@ref(fig:chinook-SRHistEven)). Random trials and inlets with abundances that remained above the lower benchmark over the time-series tended to be more productive and slightly larger. 
+3. G~REM~ a été fixé à la moyenne de la distribution entre les inlets et entre les essais. Le paramètre de productivité a été tiré de la distribution et a pu varier entre les inlets et les essais. La même distribution de la productivité a été utilisée pour les inlets et les essais, comme dans le scénario 1.
+
+
+Nous avons constaté que la sensibilité des PRL de projection aux taux d’exploitation était due à la variabilité de la productivité et, dans une moindre mesure, à G~REM~ entre les inlets. Dans le scénario 1, lorsque nous avons appliqué un taux d’exploitation relativement élevé (45 %), la productivité et G~REM~ avaient tendance à être plus faibles pour les essais aléatoires et les populations d’inlet qui sont tombés sous le PRI pour au moins un an (figure \@ref(fig:chinook-SRHistEven)). Les essais aléatoires et les populations d’inlet dont l’abondance est demeurée au-dessus du PRI au cours de la série chronologique avaient tendance à être plus productifs et légèrement plus grands. 
 
 
 
-```{r chinook-SRHistEven, fig.cap="Distribution of (a) productivity (log alpha) and (b) spawners at replacement, S~REP~ among MC trials, shaded according to whether abundances in that trial remained above the lower benchmark (red) or not (blue), under a 45\\% exploitation rate. Productivity and S~REP~ varied among inlets and trials and were drawn from common distributions. ", fig.align="center"}
+```{r chinook-SRHistEven, fig.cap="Distribution (a) de la productivité (log alpha) et (b) de l’abondance des géniteurs au remplacement, G~REM~, entre les essais de MCCM, ombrée selon que l’abondance dans cet essai est demeurée au-dessus du PRI (rouge) ou non (bleu), selon un taux d’exploitation de 45\\%. La productivité et G~REM~ ont varié entre les inlets et les essais et ont été tirés de distributions communes. ", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/evenhCor-SRHist.png', './figure/evenhCor-SRHist.png',  mode="wb")
 
@@ -35,11 +35,11 @@ knitr::include_graphics("figure/evenhCor-SRHist.png")
 
 \linebreak
 
-Inlets and Monte Carlo trials with low productivity tended to have relatively high S~gen~ (lower benchmark) values (as described in @holtCautionsUsingPercentilebased2015), and therefore a higher frequency of dropping below the lower benchmark. This variability in productivity among inlets was associated with projection-based LRPs that were sensitive to exploitation rates (Fig. \@ref(fig:chinook-ProjLRPs-Even)).
+Les populations d’inlet et les essais de MCCM à faible productivité ont tendance à avoir des valeurs G~gén~ (PRI) relativement élevées (comme décrit à la section @holtCautionsUsingPercentilebased2015), et donc une fréquence plus élevée de chute sous le PRI. Cette variabilité de la productivité entre les inlets a été associée à des PRL de projection qui étaient sensibles aux taux d’exploitation (figure \@ref(fig:chinook-ProjLRPs-Even)).
 
 
 
-```{r chinook-ProjLRPs-Even, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 10,000 MC Trials, under a range of average exploitation rates from 5-45\\%, assuming productivity and S~REP~ varied across inlets and trials, and are drawn from common distributions. Horizontal dashed lines are at 50\\% and 66\\%. Orange and pale green vertical lines are the LRPs associated with 50\\% and 66\\% probability of all inlets being above their lower benchmarks, respectively. LRPs at 66\\% probability are not shown for exploitation rates greater than 30\\% because of large uncertainty in projections at high aggregate abundances.", fig.align="center"}
+```{r chinook-ProjLRPs-Even, fig.cap="Probabilité que toutes les populations d’inlet se trouvent au-dessus de leur PRI le long d’un gradient de l’abondance agrégée dans les tranches de 200 poissons, obtenue des projections sur 30 ans et de 10 000 essais de MCCM en fonction d’une gamme de taux d’exploitation moyens de 5 à 45\\%, en supposant que la productivité et G~REM~ variaient entre les inlets et les essais, et qu’ils sont tirés de distributions communes. Les lignes horizontales pointillées sont à 50\\% et 66\\% Les lignes verticales orange et vert pâle représentent les PRL associées à une probabilité de 50\\% et 66\\% que toutes les populations d’inlet soient au-dessus de leur PRI, respectivement. Les PRL à 66\\% de probabilité ne sont pas indiqués pour les taux d’exploitation supérieurs à 30\\% en raison de la grande incertitude dans les projections à forte abondance agrégée.", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/ProjectedLRPs/ERsEven-hCor-ProjLRPCurve-ALLp.png', './figure/ERsEven-hCor-ProjLRPCurve-ALLp.png',  mode="wb")
 
@@ -51,10 +51,10 @@ knitr::include_graphics("figure/ERsEven-hCor-ProjLRPCurve-ALLp.png")
 
 \linebreak
 
-When productivity was fixed at the mean value among random trials and inlets in Scenario 2, the distribution of spawner-recruitment parameters for trials in which abundances dropped below the lower benchmark was the same or similar for trials that remained above it (Fig. \@ref(fig:chinook-SRHistSameProd)), and the LRP was insensitive to exploitation rate (Fig. \@ref(fig:chinook-ProjLRPs-SameProd)).
+Lorsque la productivité a été fixée à la valeur moyenne parmi les essais aléatoires et les inlets dans le scénario 2, la distribution des paramètres de stock-recrutement pour les essais où les abondances ont chuté sous le PRI était la même ou semblable pour les essais qui restaient au-dessus (figure \@ref(fig:chinook-SRHistSameProd)), et le PRL était insensible au taux d’exploitation (figure \@ref(fig:chinook-ProjLRPs-SameProd)).
 
 
-```{r chinook-SRHistSameProd, fig.cap="Distribution of (a) productivity (log alpha) and (b) spawners at replacement, S~REP~ among MC trials, coloured by whether abundances in that trial remained above the lower benchmark (red) or not (blue), under a 45\\% exploitation and constant productivity among inlets and trials. S~REP~ was drawn from a common distribution across inlets and trials. ", fig.align="center"}
+```{r chinook-SRHistSameProd, fig.cap="Distribution (a) de la productivité (log alpha) et (b) de l’abondance des géniteurs au remplacement, G~REM~, entre les essais de MCCM, colorées selon que l’abondance dans cet essai est demeurée au-dessus du PRI (rouge) ou non (bleu), selon une exploitation de 45\\% et une productivité constante entre les inlets et les essais. G~REM~ a été tiré d’une distribution commune entre les inlets et les essais. ", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/sameProdhCor-SRHist.png', './figure/sameProdhCor-SRHist.png', mode="wb")
 
@@ -63,7 +63,7 @@ knitr::include_graphics("figure/sameProdhCor-SRHist.png")
 
 ```
 
-```{r chinook-ProjLRPs-SameProd, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 10,000 MC Trials, under a range of average exploitation rates from 5-45\\% (across 9 panels), assuming the same productivity for each inlet and trial, and an S~REP~ that varied across inlets and trials, drawn from a common distribution. Horizontal dashed lines are at 50\\% and 66\\%. Orange and pale green vertical lines are the LRPs associated with 50\\% and 66\\% probability of all inlets being above their lower benchmarks, but are indistinguishably here. ", fig.align="center"}
+```{r chinook-ProjLRPs-SameProd, fig.cap="Probabilité que toutes les populations d’inlet se trouvent au-dessus de leur PRI le long d’un gradient de l’abondance agrégée dans les tranches de 200 poissons, obtenue des projections sur 30 ans et de 10 000 essais de MCCM en fonction d’une gamme de taux d’exploitation moyens de 5 à 45\\% (dans les neuf panneaux), en supposant la même productivité pour chaque inlet et essai et un G~REM~ qui varie entre les inlets et les essais, tiré d’une distribution commune. Les lignes horizontales pointillées sont à 50\\% et 66\\%. Les lignes verticales orange et vert pâle représentent les PRL associées à une probabilité de 50\\% et 66\\% que toutes les populations d’inlet soient au-dessus de leur PRI, mais ils sont indifférenciables ici. ", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/ProjectedLRPs/ERsSameProd-hCor-ProjLRPCurve-ALLp.png', './figure/ERsSameProd-hCor-ProjLRPCurve-ALLp.png', mode="wb")
 
@@ -75,11 +75,11 @@ knitr::include_graphics("figure/ERsSameProd-hCor-ProjLRPCurve-ALLp.png")
 
 \linebreak
 
-When S~REP~ was fixed at the mean value among inlets and random trials in Scenario 3, productivity was higher for inlets and trials that remained above benchmarks compared to those that dropped below them, similar to the scenario when both S~REP~ and productivity varied (Scenario 1) (Fig. \@ref(fig:chinook-SRHistSameSREP)). LRPs varied with exploitation rates but to a lesser extent than when both productivity and S~REP~ varied (Fig. \@ref(fig:chinook-ProjLRPs-SameSREP)).
+Lorsque G~REM~ était fixé à la valeur moyenne entre les inlets et les essais aléatoires dans le scénario 3, la productivité était plus élevée pour les inlets et les essais qui demeuraient au-dessus des PRI que pour ceux qui chutaient au-dessous, comme dans le scénario où G~REM~ et la productivité variaient (scénario 1) (figure \@ref(fig:chinook-SRHistSameSREP)). Les PRL variaient en fonction des taux d’exploitation, mais dans une moindre mesure que lorsque la productivité et G~REM~ variaient (figure \@ref(fig:chinook-ProjLRPs-SameSREP)).
 
 
 
-```{r chinook-SRHistSameSREP, fig.cap="Distribution of (a) productivity (log alpha) and (b) spawners at replacement, S~REP~ among MC trials, coloured by whether abundances in that trial remained above the lower benchmark (red) or not (blue), under a 45\\% exploitation and constant S~REP~ among inlets and trials. Productivity was drawn from a common distribution across inlets and trials. ", fig.align="center"}
+```{r chinook-SRHistSameSREP, fig.cap="Distribution (a) de la productivité (log alpha) et (b) de l’abondance des géniteurs au remplacement, G~REM~, entre les essais de MCCM, colorées selon que l’abondance dans cet essai est demeurée au-dessus du PRI (rouge) ou non (bleu), selon une exploitation de 45\\% et G~REM~ constant entre les inlets et les essais. La productivité a été tirée d’une distribution commune entre les inlets et les essais. ", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/sameSREPhCor-SRHist.png', './figure/sameSREPhCor-SRHist.png', mode="wb")
 
@@ -89,7 +89,7 @@ knitr::include_graphics("figure/sameSREPhCor-SRHist.png")
 ```
 
 
-```{r chinook-ProjLRPs-SameSREP, fig.cap="Probability of all inlets being above their lower benchmark along a gradient in aggregate abundances within bins of 200 fish, derived from projections over 30 years and 10,000 MC Trials, under a range of average exploitation rates from 5-45\\% (across 9 panels), assuming the same S~REP~ for each inlet and trial, and productivity that varied across inlets and trials, drawn from a common distribution. Horizontal dashed lines are at 50\\% and 66\\%. Orange and pale green vertical lines are the LRPs associated with 50\\% and 66\\% probability of all inlets being above their lower benchmarks, respectively. ", fig.align="center"}
+```{r chinook-ProjLRPs-SameSREP, fig.cap="Probabilité que toutes les populations d’inlets se trouvent au-dessus de leur PRI le long d’un gradient de l’abondance agrégée dans les tranches de 200 poissons, obtenue des projections sur 30 ans et de 10 000 essais de MCCM en fonction d’une gamme de taux d’exploitation moyens de 5 à 45\\% (dans les neuf panneaux), en supposant le même G~REM~ pour chaque inlet et essai et une productivité qui varie entre les inlets et les essais, tirée d’une distribution commune. Les lignes horizontales pointillées sont à 50\\% et 66\\%. Les lignes verticales orange et vert pâle représentent les PRL associées à une probabilité de 50\\% et 66\\% que toutes les populations d’inlet soient au-dessus de leur PRI, respectivement. ", fig.align="center"}
 
 download.file('https://github.com/Pacific-salmon-assess/SalmonLRP_RetroEval/raw/master/WCVIChinookStudy/Figures/ProjectedLRPs/ERsSameSREP-hCor-ProjLRPCurve-ALLp.png', './figure/ERsSameSREP-hCor-ProjLRPCurve-ALLp.png', mode="wb")
 
@@ -99,5 +99,5 @@ knitr::include_graphics("figure/ERsSameSREP-hCor-ProjLRPCurve-ALLp.png")
 
 \linebreak
 
-Based on these sensitivity analyses, we conclude that variability in productivity among inlets results in inlet-specific variability in sensitivity to exploitation rates. Inlets with relatively low productivity fall below lower benchmarks more frequently. This effect is accentuated when exploitation rates are high resulting in divergences in statuses among inlets and a higher aggregate abundance is required for all inlets to be above their lower benchmarks resulting in a higher LRP. These results are generalizable to other SMUs to the extent that productivities differ among component CUs.
+En nous basant sur ces analyses de sensibilité, nous avons conclu que la variabilité de la productivité entre les populations d’inlet constituantes entraîne une variabilité propre aux populations d’inlet de la sensibilité aux taux d’exploitation. Les populations d’inlet dont la productivité est relativement faible tombent plus fréquemment sous leur PRI. Cet effet est accentué lorsque les taux d’exploitation sont élevés, ce qui entraîne des divergences d’état entre les populations d’inlet et une augmentation de l’abondance agrégée est requise pour que toutes les populations d’inlet dépassent leur PRI, ce qui se traduit par un PRL plus élevé. Ces résultats peuvent être généralisés à d’autres UGS dans la mesure où les productivités diffèrent d’une UC constituante à l’autre.
 
