Revised title to coho chapter

--- a/caseStudyWP_FN/03-chap3.Rmd
+++ b/caseStudyWP_FN/03-chap3.Rmd
@@ -8,7 +8,7 @@ output:
 \
 &nbsp;
 
-# CASE STUDY 1: INTERIOR FRASER COHO SALMON{#IFCChapter}
+# ÉTUDE DE CAS 1 : SAUMON COHO DU FRASER INTÉRIEUR{#IFCChapter}
 
 
 ## CONTEXTE
